# Cxbx-Reloaded

./: .appveyor.yml  .azure-pipelines.yml  .gitattributes  .gitignore  .gitmodules  .travis.yml  AppveyorPackager.ps1  CMakeLists.txt  CMakeSettings.json  CONTRIBUTORS  Cxbe.dsp  Cxbe.vcproj  Cxbx.dsp  Cxbx.dsw  Cxbx.opt  Cxbx.sln  Cxbx.vcproj  CxbxKrnl.dsp  CxbxKrnl.vcproj  GatherArtifacts.bat  Makefile  PackageBuild.bat  README.md  appveyor-build.bat  appveyor-gather.bat  appveyor.yml  dx11-branch-d3d9-impact.md  dx11-nv2a-audit.md  gen-msvc-project.bat  gen-wins-project.bat  setup.bat
.github/: FUNDING.yml  ISSUE_TEMPLATE.md  labeler.yml
.github/ISSUE_TEMPLATE/: config.yml  issue-template.md  issue.yaml
.github/workflows/: CI.yml  autoclose.yml  cmake-multi-platform.yml  master_artifact_publish.yml  pr_verify_build.yml  pull-request.yml
Doc/: Changelog.txt  Cleanup.txt  Developer.txt  Direct3D.txt  Input.txt  RemovedCode.txt  Thanks.txt  Todo.txt
Doc/Development/: IDA-MissedHLF.txt
Import/OpenXDK/: readme.txt
Include/: Cxbx.h
Include/Core/: Error.h  Exe.h  Xbe.h
Include/Win32/: AlignPosfix1.h  AlignPrefix1.h  InputConfig.h  Mutex.h  XBController.h  XBVideo.h
PostBuild/: upxCxbx.bat
Resource/: Cxbx.rc  CxbxDll.rc  ResCxbx.h  ResCxbxDll.h  resource.h
Source/: Cxbx.h
Source/Common/: CxbxUtil.h  Error.cpp  Error.h  Exe.cpp  Exe.h  OpenXDK.cpp  Xbe.cpp  Xbe.h
Source/Core/: Error.cpp  Exe.cpp  Exe.h  OpenXDK.cpp  Xbe.cpp  Xbe.h
Source/Cxbe/: Main.cpp
Source/Cxbx/: DlgControllerConfig.cpp  DlgControllerConfig.h  DlgVideoConfig.cpp  DlgVideoConfig.h  EmuExe.cpp  EmuExe.h  Prolog.h  ResCxbx.h  WinMain.cpp  Wnd.h  WndAbout.cpp  WndAbout.h  WndMain.cpp  WndMain.h
Source/CxbxKrnl/: CxbxKrnl.cpp  DbgConsole.cpp  Emu.cpp  Emu.h  EmuAlloc.cpp  EmuAlloc.h  EmuD3D8.cpp  EmuD3D8.h  EmuD3D8Types.h  EmuDInput.cpp  EmuDSound.cpp  EmuDSound.h  EmuFS.h  EmuFile.cpp  EmuFile.h  EmuKrnl.cpp  EmuLDT.cpp  EmuLDT.h  EmuNtDll.cpp  EmuNtDll.h  EmuShared.h  EmuXG.cpp  EmuXG.h  EmuXOnline.h  EmuXapi.cpp  HLEDataBase.cpp  HLEDataBase.h  HLEIntercept.cpp  HLEIntercept.h  KernelThunk.cpp  OOVPA.h  ResCxbxDll.h  ResourceTracker.cpp  ResourceTracker.h
Source/Linux/: AlignPosfix1.h  AlignPrefix1.h
Source/Win32/: EmuShared.cpp  InputConfig.cpp  Mutex.cpp  XBController.cpp  XBController.h  XBVideo.cpp  XBVideo.h
doc/: 64bitsupport.txt.txt  Changelog.txt  Cleanup.txt  Direct3D.txt  Input.txt  RemovedCode.txt  ShogunChangelog.txt  ShogunRemovedCode.txt  ShogunTodo.txt  Sorted D3D8LTCG Patterns (TXT, IDA signature).7z  Sorted Reordered Dxbx Patterns (D3D only as TXT, CSV and JSON).7z  Sorted Reordered Dxbx Patterns.7z  Thanks.txt  Todo.txt  compatList.txt  old_dsound.txt
doc/development/: IDA-MissedHLF.txt
doc/doxygen/: Cxbx.Doxyfile
import/DirectX8/: DXReadme.txt  readme.txt
import/OpenXDK/: readme.txt
import/distorm/: distorm.lib
import/dokany/: README.Cxbx.md
projects/CxbxEmulator/: CMakeLists.txt
projects/CxbxGUI/: CMakeLists.txt
projects/CxbxLoader/: CMakeLists.txt
projects/cxbx/: CMakeLists.txt
projects/cxbxr/: CMakeLists.txt
projects/cxbxr-emu/: CMakeLists.txt
projects/cxbxr-ldr/: CMakeLists.txt
projects/debugger/: README.md
projects/dokany/: CMakeLists.txt
projects/imgui/: CMakeLists.txt
projects/libtom/: CMakeLists.txt
projects/libtom/crypt/: CMakeLists.txt
projects/libtom/math/: CMakeLists.txt
projects/libusb/: CMakeLists.txt
projects/vsbc/: CMakeLists.txt
resource/: .editorconfig  About.xcf  Cxbx.aps  Cxbx.rc  CxbxDll.rc  Thumbs.db
src/: .editorconfig  Cxbx.h  CxbxCommon.h  CxbxVersion.cpp  CxbxVersion.h  HighPerformanceGraphicsEnabler.c  version.h.in
src/CxbxDebugger/: App.config  CMakeLists.txt  CheatEngineManager.cs  Common.cs  CxbxDebugger.csproj  CxbxDebuggerInstance.Designer.cs  CxbxDebuggerInstance.cs  CxbxDebuggerInstance.resx  CxbxDebuggerMain.Designer.cs  CxbxDebuggerMain.cs  CxbxDebuggerMain.resx  DebugOutputManager.cs  Debugger.cs  DebuggerCallstack.cs  DebuggerEventListener.cs  DebuggerModule.cs  DebuggerProcess.cs  DebuggerThread.cs  FileEventManager.cs  FileWatchManager.cs  Form1.Designer.cs  Form1.cs  Form1.resx  IDebugWindow.cs  PatchManager.cs  Program.cs  README.md  RicherTextBox.cs  ThreadHelpers.cs
src/CxbxDebugger/Debugger/: Debugger.cs  DebuggerCallstack.cs  DebuggerEventInterfaces.cs  DebuggerEventListener.cs  DebuggerInstance.cs  DebuggerMessages.cs  DebuggerModule.cs  DebuggerProcess.cs  DebuggerSymbolServer.cs  DebuggerThread.cs
src/CxbxDebugger/DebuggerExtras/: CheatTable.cs  CheatTableReader.cs
src/CxbxDebugger/DebuggerSymbols/: DebuggerSymbolProvider.cs
src/CxbxDebugger/DebuggerSymbols/HLECache/: HLECacheFile.cs  HLECacheProvider.cs
src/CxbxDebugger/DebuggerSymbols/HLECache/Utils/: INIReader.cs
src/CxbxDebugger/DebuggerSymbols/Kernel/: KernelSymbolProvider.cs
src/CxbxDebugger/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Resources.resx  Settings.Designer.cs
src/CxbxDebugger/Win32/: ComPtr.cs  Constants.cs  HResults.cs  LastWin32ErrorException.cs  NtStatus.cs  UnicodeString.cs
src/CxbxDebugger/Win32/Debugging/: CONTINUE_STATUS.cs  CREATE_PROCESS_DEBUG_INFO.cs  CREATE_THREAD_DEBUG_INFO.cs  DEBUG_EVENT.cs  DEBUG_EVENT_CODE.cs  EXCEPTION_DEBUG_INFO.cs  EXCEPTION_RECORD.cs  EXIT_PROCESS_DEBUG_INFO.cs  EXIT_THREAD_DEBUG_INFO.cs  LOAD_DLL_DEBUG_INFO.cs  NativeMethods.cs  OUTPUT_DEBUG_STRING_INFO.cs  PTHREAD_START_ROUTINE.cs  RIP_INFO.cs  UNLOAD_DLL_DEBUG_INFO.cs
src/CxbxDebugger/Win32/Handles/: NativeMethods.cs
src/CxbxDebugger/Win32/Interop/: SecurityAttributes.cs
src/CxbxDebugger/Win32/Jobs/: IO_COUNTERS.cs  JOBOBJECTINFOCLASS.cs  JOBOBJECT_ASSOCIATE_COMPLETION_PORT.cs  JOBOBJECT_BASIC_LIMIT_INFORMATION.cs  JOBOBJECT_EXTENDED_LIMIT_INFORMATION.cs  JobInformationLimitFlags.cs  JobMsgInfoMessages.cs  NativeMethods.cs
src/CxbxDebugger/Win32/Processes/: NativeEnums.cs  NativeMethods.cs  NativeStructs.cs  PROCESS_INFORMATION.cs  ProcessCreationFlags.cs  SafeProcessHandle.cs  SafeThreadHandle.cs  Startupinfo.cs
src/CxbxDebugger/Win32/Windows/: NativeMethods.cs
(+1770 files in other folders)
